--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         </div>
       </div>
     </section>
-    <!-- <div class="seafood-box">
+   <div class="seafood-box">
       <div class="container">
         <div class="seafood-box__items">
           <div class="seafood-box__item">Уникальное разнообразие</div>
@@ -553,7 +553,7 @@
           </ul>
         </div>
       </div>
-    </div>-->
+    </div>
   </main>
   <footer class="footer">
     <div class="container">
