--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <a href="#" class="header__content-btn">ВЫБРАТЬ</a>
           <div class="header__content-box">
             <a href="#" class="header__content-link header__content-link--active">RU</a>
-            <a href="#" class="header__content-link">EN</a>
+            <a href="#" class="header__content-link">/EN</a>
           </div>
         </div>
       </div>
